force-app/main/default/objects/Metadata_Component_Snapshot__c/Metadata_Component_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Metadata Component Snapshot</label>
    <pluralLabel>Metadata Component Snapshots</pluralLabel>
    <nameField>
        <label>Metadata Snapshot Name</label>
        <type>AutoNumber</type>
        <displayFormat>MS-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>