force-app/main/default/objects/Metadata_Component_Snapshot__c/fields/Audit_Run__c.field-meta.xml
<CustomField><fullName>Audit_Run__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Audit Run</label><referenceTo>Audit_Run__c</referenceTo><relationshipLabel>Metadata Component Snapshots</relationshipLabel><relationshipName>Metadata_Component_Snapshots</relationshipName><type>Lookup</type></CustomField>