force-app/main/default/objects/Metadata_Component_Snapshot__c/fields/Component_Full_Name__c.field-meta.xml
<CustomField><fullName>Component_Full_Name__c</fullName><label>Component Full Name</label><length>255</length><type>Text</type></CustomField>