force-app/main/default/objects/Metadata_Component_Snapshot__c/fields/Component_Hash__c.field-meta.xml
<CustomField><fullName>Component_Hash__c</fullName><label>Component Hash</label><length>255</length><type>Text</type></CustomField>