force-app/main/default/objects/Metadata_Component_Snapshot__c/fields/Is_Current__c.field-meta.xml
<CustomField><fullName>Is_Current__c</fullName><defaultValue>true</defaultValue><label>Is Current</label><type>Checkbox</type></CustomField>