force-app/main/default/objects/Metadata_Component_Snapshot__c/fields/Snapshot_Body__c.field-meta.xml
<CustomField><fullName>Snapshot_Body__c</fullName><label>Snapshot Body</label><length>131072</length><type>LongTextArea</type><visibleLines>10</visibleLines></CustomField>