force-app/main/default/objects/Metadata_Component_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField><fullName>Snapshot_Date__c</fullName><label>Snapshot Date</label><type>DateTime</type></CustomField>