force-app/main/default/objects/Metadata_Component_Snapshot__c/fields/Snapshot_Key__c.field-meta.xml
<CustomField><fullName>Snapshot_Key__c</fullName><externalId>true</externalId><label>Snapshot Key</label><length>255</length><type>Text</type><unique>true</unique></CustomField>