force-app/main/default/objects/Metadata_Component_Snapshot__c/fields/Snapshot_Source__c.field-meta.xml
<CustomField><fullName>Snapshot_Source__c</fullName><label>Snapshot Source</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Salesforce CLI</fullName><default>true</default><label>Salesforce CLI</label></value><value><fullName>Metadata API</fullName><default>false</default><label>Metadata API</label></value><value><fullName>Tooling API</fullName><default>false</default><label>Tooling API</label></value><value><fullName>Manual</fullName><default>false</default><label>Manual</label></value></valueSetDefinition></valueSet></CustomField>